[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/GameScreen.gd" type="Script" id=1]
[ext_resource path="res://Scenes/WorldCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/GroundTileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/ObjectsTileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/SideMenu/SideMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Inhabitant.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Train/Train.tscn" type="PackedScene" id=8]

[node name="GameScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="WorldCamera" parent="." instance=ExtResource( 2 )]
current = true

[node name="World" type="Node2D" parent="."]

[node name="GroundTileMap" parent="World" instance=ExtResource( 3 )]
position = Vector2( -8, -8 )
tile_data = PoolIntArray( -65548, 0, 0, -65547, 0, 0, -65546, 0, 0, -65545, 0, 0, -65544, 0, 0, 65524, 0, 0, 65525, 0, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 0, 4, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393239, 0, 0, 393241, 0, 0, 393243, 0, 0, 393246, 0, 0, 393248, 0, 0, 393249, 0, 0, 458760, 0, 0, 458761, 0, 0, 458766, 0, 0, 458768, 0, 0, 458771, 0, 0, 458773, 0, 0, 458775, 0, 0, 458777, 0, 0, 458779, 0, 0, 458780, 0, 0, 458782, 0, 0, 458784, 0, 0, 458786, 0, 0, 524296, 0, 0, 524299, 0, 0, 524300, 0, 0, 524302, 0, 0, 524303, 0, 0, 524307, 0, 0, 524309, 0, 0, 524311, 0, 0, 524313, 0, 0, 524315, 0, 0, 524316, 0, 0, 524318, 0, 0, 524320, 0, 0, 524322, 0, 0, 589832, 0, 0, 589833, 0, 0, 589836, 0, 0, 589838, 0, 0, 589840, 0, 0, 589843, 0, 0, 589845, 0, 0, 589847, 0, 0, 589849, 0, 0, 589851, 0, 0, 589853, 0, 0, 589854, 0, 0, 589856, 0, 0, 589858, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655374, 0, 0, 655377, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 655387, 0, 0, 655389, 0, 0, 655390, 0, 0, 655392, 0, 0, 655393, 0, 0 )

[node name="ObjectsTileMap" parent="World" instance=ExtResource( 4 )]
position = Vector2( -8, -8 )
tile_data = PoolIntArray( -1, 16, 0, 65524, 16, 0, 65525, 16, 0, 65526, 16, 0, 65527, 16, 0, 65528, 16, 0, 65529, 16, 0, 65530, 16, 0, 65531, 16, 0, 65532, 16, 0, 65533, 16, 0, 65534, 16, 0, 65535, 16, 0, 0, 16, 0, 1, 16, 0, 2, 16, 0 )

[node name="Entities" type="Node2D" parent="World"]

[node name="Inhabitant" parent="World/Entities" instance=ExtResource( 6 )]
frame = 2

[node name="Train" parent="World/Entities" instance=ExtResource( 8 )]
position = Vector2( -512, -64 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SideMenu" parent="CanvasLayer" instance=ExtResource( 5 )]
[connection signal="option_selected" from="CanvasLayer/SideMenu" to="." method="_on_SideMenu_option_selected"]
[connection signal="rotation_requested" from="CanvasLayer/SideMenu" to="." method="_on_SideMenu_rotation_requested"]
[connection signal="save_and_quit_requested" from="CanvasLayer/SideMenu" to="." method="_on_SideMenu_save_and_quit_requested"]
